--- a/TO-DO-LIST/public/index.html
+++ b/TO-DO-LIST/public/index.html
@@ -1,75 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Todo App</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Smart Todo App</title>
+
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+
 <body>
 
-<!-- ===== LOGGED OUT VIEW ===== -->
+<!-- ===== AUTH SECTION ===== -->
 <div id="auth-section" class="auth-card">
-    <h3 id="auth-title">Login / Signup</h3>
+  <h3>Login / Signup</h3>
+  <input id="email" type="email" placeholder="Email">
+  <input id="password" type="password" placeholder="Password">
 
-    <input id="email" type="email" placeholder="Email">
-    <input id="password" type="password" placeholder="Password">
-
-    <div class="auth-buttons">
-        <button onclick="signup()" class="btn-secondary">Signup</button>
-        <button onclick="login()" class="btn-primary">Login</button>
-    </div>
+  <div class="auth-buttons">
+    <button onclick="signup()" class="btn-secondary">Signup</button>
+    <button onclick="login()" class="btn-primary">Login</button>
+  </div>
 </div>
 
-<!-- ===== LOGGED IN VIEW ===== -->
+<!-- ===== APP SECTION ===== -->
 <div id="app-section" style="display:none;">
 
-    <!-- TOP NAV BAR -->
-    <div class="top-bar">
-        <div class="profile-menu">
-            <div class="avatar" onclick="toggleProfileMenu()">👤</div>
+  <!-- TOP BUTTONS -->
+  <button class="menu-btn" onclick="toggleProfileMenu()">☰</button>
+  <button class="dark-toggle" onclick="toggleDark()">🌙</button>
 
-            <div id="profile-dropdown" class="dropdown hidden">
-                <p id="profile-email">Not logged in</p>
-                <button onclick="logout()" class="btn-secondary">Logout</button>
-                <button onclick="deleteAccount()" class="btn-danger">Delete Account</button>
-            </div>
-        </div>
+  <!-- PROFILE MENU -->
+  <div id="profile-dropdown" class="menu hidden">
+    <p id="profile-email">User</p>
+    <button onclick="logout()">Logout</button>
+    <button onclick="deleteAccount()">Delete Account</button>
+  </div>
+
+  <!-- MAIN CARD -->
+  <div class="card">
+    <h2>Smart Tasks</h2>
+
+    <div class="input-area">
+      <input id="todo-input" placeholder="Task name">
+      <select id="priority-select">
+        <option value="high">🔥 High</option>
+        <option value="medium">⚡ Medium</option>
+        <option value="low">🌿 Low</option>
+      </select>
+      <input type="datetime-local" id="due-date">
+      <button id="add-btn" class="add-btn">➕ Add Task</button>
     </div>
 
-    <div class="container">
-        <h1>To-Do List</h1>
-
-        <div class="input-group">
-            <input type="text" id="todo-input" placeholder="Add a new task...">
-            <select id="priority-select">
-                <option value="low">Low</option>
-                <option value="medium" selected>Medium</option>
-                <option value="high">High</option>
-            </select>
-            <input type="datetime-local" id="due-date">
-            <button id="add-btn"><i class="fas fa-plus"></i></button>
-        </div>
-
-        <div class="filters">
-            <button class="filter-btn active" data-filter="all">All</button>
-            <button class="filter-btn" data-filter="active">Active</button>
-            <button class="filter-btn" data-filter="completed">Completed</button>
-        </div>
-
-        <p id="loading" style="text-align:center; display:none;">Loading...</p>
-
-        <ul id="todo-list"></ul>
-
-        <p id="empty-msg" style="text-align:center; color:#888; display:none;">
-            No tasks yet. Add one above!
-        </p>
+    <div class="filters">
+      <button class="filter-btn active" data-filter="all">All</button>
+      <button class="filter-btn" data-filter="active">Active</button>
+      <button class="filter-btn" data-filter="completed">Completed</button>
     </div>
+
+    <p id="loading" class="hidden">Loading...</p>
+    <ul id="todo-list"></ul>
+    <p id="empty-msg" class="empty hidden">No tasks yet</p>
+  </div>
 
 </div>
 
 <script src="script.js"></script>
 </body>
-
 </html>
