--- a/TO-DO-LIST/public/index.html
+++ b/TO-DO-LIST/public/index.html
@@ -11,10 +11,10 @@
 
 <body>
 
-<!-- 🌙 DARK MODE BUTTON -->
+<!-- 🌙 DARK MODE -->
 <button class="dark-toggle" id="darkBtn" onclick="toggleDark()">🌙</button>
 
-<!-- 🔐 AUTH SECTION -->
+<!-- 🔐 AUTH -->
 <div id="auth-section" class="auth-card">
   <h3>Login / Signup</h3>
   <input id="email" type="email" placeholder="Email">
@@ -26,14 +26,26 @@
   </div>
 </div>
 
-<!-- ✅ APP SECTION -->
+<!-- ✅ APP -->
 <div id="app-section" style="display:none;">
   <div class="card">
 
-    <h2>Smart Tasks</h2>
+    <!-- HEADER -->
+    <div class="card-header">
+      <h2>Smart Tasks</h2>
+      <div class="account-actions">
+        <button onclick="logout()" title="Logout">
+          <i class="fas fa-sign-out-alt"></i>
+        </button>
+        <button onclick="deleteAccount()" title="Delete Account">
+          <i class="fas fa-user-slash"></i>
+        </button>
+      </div>
+    </div>
 
+    <!-- INPUTS -->
     <div class="input-area">
-      <input id="todo-input" placeholder="Task name">
+      <input id="todo-input" placeholder="Enter task name">
 
       <select id="priority-select">
         <option value="high">🔥 High</option>
@@ -48,12 +60,14 @@
       </button>
     </div>
 
+    <!-- FILTERS -->
     <div class="filters">
       <button class="filter-btn active" data-filter="all">All</button>
       <button class="filter-btn" data-filter="active">Active</button>
       <button class="filter-btn" data-filter="completed">Completed</button>
     </div>
 
+    <!-- LIST -->
     <p id="loading" class="hidden">Loading...</p>
     <ul id="todo-list"></ul>
     <p id="empty-msg" class="empty hidden">No tasks yet</p>
