--- a/TO-DO-LIST/public/index.html
+++ b/TO-DO-LIST/public/index.html
@@ -11,22 +11,31 @@
 
 <body>
 
-<!-- 🌙 DARK MODE BUTTON -->
+<!-- ☰ MENU BUTTON -->
+<button class="menu-btn" onclick="toggleMenu()">☰</button>
+
+<!-- 🌙 DARK MODE -->
 <button class="dark-toggle" id="darkBtn" onclick="toggleDark()">🌙</button>
 
-<!-- 🔐 AUTH SECTION -->
+<!-- 📋 LEFT MENU -->
+<div class="menu" id="menu">
+  <button onclick="closeMenu()">📝 Tasks</button>
+  <button onclick="logout()">🚪 Logout</button>
+  <button class="danger" onclick="deleteAccount()">🗑 Delete Account</button>
+</div>
+
+<!-- 🔐 AUTH -->
 <div id="auth-section" class="auth-card">
   <h3>Login / Signup</h3>
   <input id="email" type="email" placeholder="Email">
   <input id="password" type="password" placeholder="Password">
-
   <div class="auth-buttons">
     <button class="btn-secondary" onclick="signup()">Signup</button>
     <button class="btn-primary" onclick="login()">Login</button>
   </div>
 </div>
 
-<!-- ✅ APP SECTION -->
+<!-- ✅ APP -->
 <div id="app-section" style="display:none;">
   <div class="card">
 
